--- a/Auto-AVSR.ipynb
+++ b/Auto-AVSR.ipynb
@@ -9175,16 +9175,16 @@
         "    --root-dir \"/content/hi\" \\\n",
         "    --dataset \"lrs2\"\\\n",
         "    --subset \"train\" \\\n",
-        "    --groups 15"
+        "    --groups 50"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6eWgNRxLXaxS",
-        "outputId": "17f72421-8341-4a9b-b3a2-b8dc6b41dbb1"
+        "outputId": "10572881-4135-48a8-a120-3e062d69782b"
       },
-      "execution_count": 9,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -9193,7 +9193,7 @@
             "Traceback (most recent call last):\n",
             "  File \"/content/auto_avsr/preparation/merge.py\", line 56, in <module>\n",
             "    assert os.path.exists(label_filename), f\"{label_filename} does not exist.\"\n",
-            "AssertionError: /content/hi/labels/lrs2_train_transcript_lengths_seg24s.15.0.csv does not exist.\n"
+            "AssertionError: /content/hi/labels/lrs2_train_transcript_lengths_seg24s.50.1.csv does not exist.\n"
           ]
         }
       ]
@@ -9298,10 +9298,10 @@
       "cell_type": "code",
       "source": [
         "#Inference\n",
-        "!python /content/auto_avsr/infer.py data.modality=\"\"audiovisual\"\" \\\n",
+        "!python /content/auto_avsr/infer.py data.modality=\"audiovisual\" \\\n",
         "                ckpt_path=\"null\" \\\n",
         "                trainer.num_nodes=1 \\\n",
-        "                infer_path=\"/content/4_5875475356386856878 (1).mp4\"\n",
+        "                infer_path=\"/content/4_5875475356386856878.mp4\"\n",
         "#version_base=None added to infer.py to avoid error"
       ],
       "metadata": {
@@ -9309,39 +9309,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HL1CHZTRXamZ",
-        "outputId": "a90a6a69-a34d-4f77-e67c-bdbd74ff58a6"
+        "outputId": "006a53ff-2eb9-431f-b082-f374679723ca"
       },
-      "execution_count": 29,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "mismatched input ' (' expecting <EOF>\n",
-            "See https://hydra.cc/docs/1.2/advanced/override_grammar/basic for details\n",
+            "[2023-07-30 16:07:43,925][torch.distributed.nn.jit.instantiator][INFO] - Created a temporary directory at /tmp/tmpya21v3u5\n",
+            "[2023-07-30 16:07:43,925][torch.distributed.nn.jit.instantiator][INFO] - Writing /tmp/tmpya21v3u5/_remote_module_non_scriptable.py\n",
+            "Error executing job with overrides: ['data.modality=audiovisual', 'ckpt_path=null', 'trainer.num_nodes=1', 'infer_path=/content/4_5875475356386856878.mp4']\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/auto_avsr/infer.py\", line 79, in main\n",
+            "    pipeline = InferencePipeline(cfg)\n",
+            "  File \"/content/auto_avsr/infer.py\", line 30, in __init__\n",
+            "    self.modelmodule = ModelModule(cfg)\n",
+            "  File \"/content/auto_avsr/lightning.py\", line 33, in __init__\n",
+            "    self.model = E2E(len(self.token_list), self.backbone_args)\n",
+            "  File \"/usr/local/lib/python3.10/site-packages/torch/nn/modules/module.py\", line 1614, in __getattr__\n",
+            "    raise AttributeError(\"'{}' object has no attribute '{}'\".format(\n",
+            "AttributeError: 'ModelModule' object has no attribute 'backbone_args'\n",
             "\n",
             "Set the environment variable HYDRA_FULL_ERROR=1 for a complete stack trace.\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Q3Hfybc5XajW"
-      },
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "04eUSAspXacu"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
